# SboxOptimization

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cc
src/costfunctions/: CostFunction.hh  Nonlinearity.cc  Nonlinearity.hh
